# hask-codewars

./: .test-codewars.hs.swp  KataSpec.hs  autocompile.bat  autorefresh-test.ps1  autorefresh-test.sh  bug.hs  codewars.cabal  kata.hs  learn.hs  pegs.hs  readme.md  sleep_until_modified.sh  test-codewars.hs
tests/: KataSpec.hs
