name:                codewars
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , split

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , split
