name:                codewars
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , hspec
                     , QuickCheck

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Kata.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
